--- a/tcc/src/main/resources/static/css/perfil.css
+++ b/tcc/src/main/resources/static/css/perfil.css
@@ -1,16 +1,93 @@
 * {
-    font-family: 'Poppins', sans-serif;
-    font-family: 'Roboto', sans-serif;
-    margin: 0;
-    padding: 0;
+	font-family: 'Poppins', sans-serif;
+	font-family: 'Roboto', sans-serif;
+	margin: 0;
+	padding: 0;
 }
 
 body {
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-    background: #FFF5E0;
-    justify-content: space-between;
+	display: flex;
+	flex-direction: column;
+	height: 100vh;
+	background: #FFF5E0;
+	justify-content: space-between;
+}
+
+@media (max-width:1200px) {
+	.listaProdutos {
+		width: 496px !important;
+		top: 129px;
+	}
+
+	.caixaPesquisa {
+		display: flex !important;
+		justify-content: center !important;
+	}
+
+	.navigation {
+		flex-direction: column;
+		gap: 1rem;
+	}
+	
+	#icones{
+		top: 30% !important;
+	}
+}
+
+@media (max-width:767px) {
+	body {
+		overflow-x: hidden;
+	}
+
+	#logo {
+		text-align: center;
+	}
+
+	.caixaPesquisa input {
+		width: 400px !important;
+	}
+
+	.navigation {
+		flex-direction: column;
+		gap: 1rem;
+		align-items: unset !important;
+	}
+
+	ul {
+		flex-direction: column;
+		align-items: center;
+		gap: 1rem;
+		padding-left: 0;
+	}
+
+	#perfilCampos {
+		width: 70% !important;
+	}
+
+	#perfil {
+		width: 90% !important;
+		height: 95% !important;
+	}
+
+	#botoes {
+		width: 100% !important;
+		justify-content: space-between !important;
+
+	}
+
+	.button-39 {
+		margin: 10px;
+		padding: 7px !important;
+	}
+
+	#icones {
+		right: 8% !important;
+		top: 46% !important;
+	}
+
+	.listaProdutos {
+		width: 355px !important;
+	}
 }
 
 
@@ -18,83 +95,83 @@ body {
 /* Navbar  */
 
 .navigation {
-    top: 0;
-    width: 100%;
-    background: black;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    padding: 10px;
+	top: 0;
+	width: 100%;
+	background: black;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	padding: 10px;
 }
 
 #caixaPesquisa {
-    width: 67%;
+	width: 67%;
 }
 
 .links {
-    margin-top: 10px;
+	margin-top: 10px;
 }
 
 #logo {
-    margin-top: 10px;
+	margin-top: 10px;
 }
 
 #logo a {
-    color: white;
-    text-decoration: none;
-    list-style: none;
+	color: white;
+	text-decoration: none;
+	list-style: none;
 }
 
 #logo p {
-    font-size: 26px;
-    font-weight: bold;
+	font-size: 26px;
+	font-weight: bold;
 }
 
 
 .links ul {
-    list-style: none;
-    display: flex;
+	list-style: none;
+	display: flex;
 }
 
 .links li a {
-    margin-left: 15px;
-    color: white;
-    text-decoration: none;
-    font-size: 16px;
-    font-weight: 700;
+	margin-left: 15px;
+	color: white;
+	text-decoration: none;
+	font-size: 16px;
+	font-weight: 700;
 }
 
 .links a:hover {
-    color: wheat;
+	color: wheat;
 }
 
 
 
 
 .pesquisa {
-    display: flex;
-    align-items: center;
-    gap: 1rem;
+	display: flex;
+	align-items: center;
+	gap: 1rem;
 }
 
 .caixaPesquisa a {
-    color: white;
+	color: white;
 }
 
 .caixaPesquisa input {
-    width: 500px;
-    height: 40px;
-    border-radius: 5px;
-    padding-left: 20px;
+	width: 500px;
+	height: 40px;
+	border-radius: 5px;
+	padding-left: 20px;
 }
 
 .caixaPesquisa input::placeholder {
-    font-size: 14px;
+	font-size: 14px;
 }
 
 
 .item-name {
-    margin-left: 15px;
+	margin-left: 15px;
 }
 
 .listaProdutos {
@@ -108,27 +185,27 @@ body {
 
 
 .listaProdutos ul {
-    padding: 10px;
-    list-style: none;
-    width: 95%;
-    display: block;
+	padding: 10px;
+	list-style: none;
+	width: 95%;
+	display: block;
 }
 
 
 
 .listaProdutos li a {
-    display: flex;
-    align-items: center;
-    text-decoration: none;
-    font-size: 18px;
-    color: black;
-    background: #f6f6f6;
-    border: 1px solid #ddd;
-    padding: 12px;
+	display: flex;
+	align-items: center;
+	text-decoration: none;
+	font-size: 18px;
+	color: black;
+	background: #f6f6f6;
+	border: 1px solid #ddd;
+	padding: 12px;
 }
 
 .listaProdutos li a:hover {
-    background: #eee;
+	background: #eee;
 }
 
 
@@ -137,73 +214,73 @@ body {
 /* Navbar  */
 
 .filtros ul {
-    display: flex;
-    list-style: none;
-    gap: 2rem;
+	display: flex;
+	list-style: none;
+	gap: 2rem;
 }
 
 .filtros li {
-    display: flex;
-    gap: 1rem;
+	display: flex;
+	gap: 1rem;
 }
 
 #results {
-    display: flex;
-    align-items: center;
-    gap: 2rem;
-    flex-direction: column;
+	display: flex;
+	align-items: center;
+	gap: 2rem;
+	flex-direction: column;
 }
 
 .conteudo {
-    flex: 1;
-    margin-top: 5%;
+	flex: 1;
+	margin-top: 5%;
 }
 
 #services {
-    width: 60%;
-    display: flex;
-    flex-direction: column;
-    background: #fff;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+	width: 60%;
+	display: flex;
+	flex-direction: column;
+	background: #fff;
+	box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 .caixaResult {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
-    border-bottom: 1px solid #e0e0e0;
-    border-top: 1px solid #e0e0e0;
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
+	margin-top: 2rem;
+	margin-bottom: 2rem;
+	border-bottom: 1px solid #e0e0e0;
+	border-top: 1px solid #e0e0e0;
 }
 
 .caixaResult img {
-    width: 250px;
+	width: 250px;
 }
 
 .caixaResult div {
-    margin-top: 20px;
-    margin-bottom: 20px;
+	margin-top: 20px;
+	margin-bottom: 20px;
 }
 
 .txtResult {
-    width: 25%;
+	width: 25%;
 }
 
 footer {
-    width: 100%;
-    background: black;
-    color: white;
-    padding: 30px;
+	width: 100%;
+	background: black;
+	color: white;
+	padding: 30px;
 }
 
 
 /* Remove o ícone de limpar (x) do campo de input tipo search */
 input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-clear-button {
-    -webkit-appearance: none;
-    appearance: none;
-    display: none;
+	-webkit-appearance: none;
+	appearance: none;
+	display: none;
 }
 
 /* CheckBox */
@@ -212,213 +289,215 @@ input[type="search"]::-webkit-search-clear-button {
 .checkbox-wrapper-1 *,
 .checkbox-wrapper-1 ::after,
 .checkbox-wrapper-1 ::before {
-    box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 .checkbox-wrapper-1 [type=checkbox].substituted {
-    margin: 0;
-    width: 0;
-    height: 0;
-    display: inline;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
+	margin: 0;
+	width: 0;
+	height: 0;
+	display: inline;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
 }
 
 .checkbox-wrapper-1 [type=checkbox].substituted+label:before {
-    content: "";
-    display: inline-block;
-    vertical-align: top;
-    height: 1.15em;
-    width: 1.15em;
-    margin-right: 0.6em;
-    color: rgba(0, 0, 0, 0.275);
-    border: solid 0.06em;
-    box-shadow: 0 0 0.04em, 0 0.06em 0.16em -0.03em inset, 0 0 0 0.07em transparent inset;
-    border-radius: 0.2em;
-    background: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" version="1.1" xml:space="preserve" fill="white" viewBox="0 0 9 9"><rect x="0" y="4.3" transform="matrix(-0.707 -0.7072 0.7072 -0.707 0.5891 10.4702)" width="4.3" height="1.6" /><rect x="2.2" y="2.9" transform="matrix(-0.7071 0.7071 -0.7071 -0.7071 12.1877 2.9833)" width="6.1" height="1.7" /></svg>') no-repeat center, white;
-    background-size: 0;
-    will-change: color, border, background, background-size, box-shadow;
-    transform: translate3d(0, 0, 0);
-    transition: color 0.1s, border 0.1s, background 0.15s, box-shadow 0.1s;
+	content: "";
+	display: inline-block;
+	vertical-align: top;
+	height: 1.15em;
+	width: 1.15em;
+	margin-right: 0.6em;
+	color: rgba(0, 0, 0, 0.275);
+	border: solid 0.06em;
+	box-shadow: 0 0 0.04em, 0 0.06em 0.16em -0.03em inset, 0 0 0 0.07em transparent inset;
+	border-radius: 0.2em;
+	background: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" version="1.1" xml:space="preserve" fill="white" viewBox="0 0 9 9"><rect x="0" y="4.3" transform="matrix(-0.707 -0.7072 0.7072 -0.707 0.5891 10.4702)" width="4.3" height="1.6" /><rect x="2.2" y="2.9" transform="matrix(-0.7071 0.7071 -0.7071 -0.7071 12.1877 2.9833)" width="6.1" height="1.7" /></svg>') no-repeat center, white;
+	background-size: 0;
+	will-change: color, border, background, background-size, box-shadow;
+	transform: translate3d(0, 0, 0);
+	transition: color 0.1s, border 0.1s, background 0.15s, box-shadow 0.1s;
 }
 
 .checkbox-wrapper-1 [type=checkbox].substituted:enabled:active+label:before,
 .checkbox-wrapper-1 [type=checkbox].substituted:enabled+label:active:before {
-    box-shadow: 0 0 0.04em, 0 0.06em 0.16em -0.03em transparent inset, 0 0 0 0.07em rgba(0, 0, 0, 0.1) inset;
-    background-color: #f0f0f0;
+	box-shadow: 0 0 0.04em, 0 0.06em 0.16em -0.03em transparent inset, 0 0 0 0.07em rgba(0, 0, 0, 0.1) inset;
+	background-color: #f0f0f0;
 }
 
 .checkbox-wrapper-1 [type=checkbox].substituted:checked+label:before {
-    background-color: #3B99FC;
-    background-size: 0.75em;
-    color: rgba(0, 0, 0, 0.075);
+	background-color: #3B99FC;
+	background-size: 0.75em;
+	color: rgba(0, 0, 0, 0.075);
 }
 
 .checkbox-wrapper-1 [type=checkbox].substituted:checked:enabled:active+label:before,
 .checkbox-wrapper-1 [type=checkbox].substituted:checked:enabled+label:active:before {
-    background-color: #0a7ffb;
-    color: rgba(0, 0, 0, 0.275);
+	background-color: #0a7ffb;
+	color: rgba(0, 0, 0, 0.275);
 }
 
 .checkbox-wrapper-1 [type=checkbox].substituted:focus+label:before {
-    box-shadow: 0 0 0.04em, 0 0.06em 0.16em -0.03em transparent inset, 0 0 0 0.07em rgba(0, 0, 0, 0.1) inset, 0 0 0 3.3px rgba(65, 159, 255, 0.55), 0 0 0 5px rgba(65, 159, 255, 0.3);
+	box-shadow: 0 0 0.04em, 0 0.06em 0.16em -0.03em transparent inset, 0 0 0 0.07em rgba(0, 0, 0, 0.1) inset, 0 0 0 3.3px rgba(65, 159, 255, 0.55), 0 0 0 5px rgba(65, 159, 255, 0.3);
 }
 
 .checkbox-wrapper-1 [type=checkbox].substituted:focus:active+label:before,
 .checkbox-wrapper-1 [type=checkbox].substituted:focus+label:active:before {
-    box-shadow: 0 0 0.04em, 0 0.06em 0.16em -0.03em transparent inset, 0 0 0 0.07em rgba(0, 0, 0, 0.1) inset, 0 0 0 3.3px rgba(65, 159, 255, 0.55), 0 0 0 5px rgba(65, 159, 255, 0.3);
+	box-shadow: 0 0 0.04em, 0 0.06em 0.16em -0.03em transparent inset, 0 0 0 0.07em rgba(0, 0, 0, 0.1) inset, 0 0 0 3.3px rgba(65, 159, 255, 0.55), 0 0 0 5px rgba(65, 159, 255, 0.3);
 }
 
 .checkbox-wrapper-1 [type=checkbox].substituted:disabled+label:before {
-    opacity: 0.5;
+	opacity: 0.5;
 }
 
 .checkbox-wrapper-1 [type=checkbox].substituted.dark+label:before {
-    color: rgba(255, 255, 255, 0.275);
-    background-color: #222;
-    background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" version="1.1" xml:space="preserve" fill="rgba(34, 34, 34, 0.999)" viewBox="0 0 9 9"><rect x="0" y="4.3" transform="matrix(-0.707 -0.7072 0.7072 -0.707 0.5891 10.4702)" width="4.3" height="1.6" /><rect x="2.2" y="2.9" transform="matrix(-0.7071 0.7071 -0.7071 -0.7071 12.1877 2.9833)" width="6.1" height="1.7" /></svg>');
+	color: rgba(255, 255, 255, 0.275);
+	background-color: #222;
+	background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" version="1.1" xml:space="preserve" fill="rgba(34, 34, 34, 0.999)" viewBox="0 0 9 9"><rect x="0" y="4.3" transform="matrix(-0.707 -0.7072 0.7072 -0.707 0.5891 10.4702)" width="4.3" height="1.6" /><rect x="2.2" y="2.9" transform="matrix(-0.7071 0.7071 -0.7071 -0.7071 12.1877 2.9833)" width="6.1" height="1.7" /></svg>');
 }
 
 .checkbox-wrapper-1 [type=checkbox].substituted.dark:enabled:active+label:before,
 .checkbox-wrapper-1 [type=checkbox].substituted.dark:enabled+label:active:before {
-    background-color: #444;
-    box-shadow: 0 0 0.04em, 0 0.06em 0.16em -0.03em transparent inset, 0 0 0 0.07em rgba(255, 255, 255, 0.1) inset;
+	background-color: #444;
+	box-shadow: 0 0 0.04em, 0 0.06em 0.16em -0.03em transparent inset, 0 0 0 0.07em rgba(255, 255, 255, 0.1) inset;
 }
 
 .checkbox-wrapper-1 [type=checkbox].substituted.dark:checked+label:before {
-    background-color: #a97035;
-    color: rgba(255, 255, 255, 0.075);
+	background-color: #a97035;
+	color: rgba(255, 255, 255, 0.075);
 }
 
 .checkbox-wrapper-1 [type=checkbox].substituted.dark:checked:enabled:active+label:before,
 .checkbox-wrapper-1 [type=checkbox].substituted.dark:checked:enabled+label:active:before {
-    background-color: #c68035;
-    color: rgba(0, 0, 0, 0.275);
+	background-color: #c68035;
+	color: rgba(0, 0, 0, 0.275);
 }
 
 
-#caixaPerfil{
-    width: 100%;
-    height: 60%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+#caixaPerfil {
+	width: 100%;
+	height: 60%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
-#perfil{
-    width: 50%;
-    border: 1px solid black;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    flex-direction: column;
-    background: white;
-    border-radius: 8px;
+#perfil {
+	width: 50%;
+	border: 1px solid black;
+	height: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+	flex-direction: column;
+	background: white;
+	border-radius: 8px;
 }
 
 .profile-picture {
-    width: 150px; /* ajuste conforme necessário */
-    height: 150px; /* ajuste conforme necessário */
-    overflow: hidden;
-    border-radius: 50%;
-    position: relative;
+	width: 150px;
+	/* ajuste conforme necessário */
+	height: 150px;
+	/* ajuste conforme necessário */
+	overflow: hidden;
+	border-radius: 50%;
+	position: relative;
 }
 
 .profile-picture input {
-    display: none;
+	display: none;
 }
 
 .profile-picture img {
-    width: 100%;
-    height: 90%;
-    border-radius: 50%;
-    padding: 6px;
+	width: 100%;
+	height: 90%;
+	border-radius: 50%;
+	padding: 6px;
 }
 
 .profile-picture label {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    cursor: pointer;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	cursor: pointer;
 }
 
 
-#perfilCampos{
-    display: flex;
-    flex-direction: column;
-    width: 50%;
-    gap: 1rem;
+#perfilCampos {
+	display: flex;
+	flex-direction: column;
+	width: 50%;
+	gap: 1rem;
 }
 
-.campo{
-    display: flex;
-    flex-direction: column;
+.campo {
+	display: flex;
+	flex-direction: column;
 }
 
-.campo input{
-    padding: 0px 15px 0px;
-    border-radius: 5px;
-    border: 1px solid #1b1a1a;
-    background: #cfc4c4
+.campo input {
+	padding: 0px 15px 0px;
+	border-radius: 5px;
+	border: 1px solid #1b1a1a;
+	background: #cfc4c4
 }
 
-#icones{
-    position: absolute;
-    right: 30%;
-    top: 25%;
+#icones {
+	position: absolute;
+	right: 30%;
+	top: 25%;
 }
 
-#icones button{
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
-    font-size: 28px;
+#icones button {
+	background-color: transparent;
+	border: none;
+	cursor: pointer;
+	font-size: 28px;
 }
 
-#icones button:hover{
-    color: #0a7ffb;
+#icones button:hover {
+	color: #0a7ffb;
 }
 
 
-#botoes{
-    display: flex;
-    justify-content: space-around;
-    width: 50%;
+#botoes {
+	display: flex;
+	justify-content: space-around;
+	width: 50%;
 }
 
 .button-39 {
-    background-color: #eee;
-    border: 1px solid rgb(209,213,219);
-    border-radius: .5rem;
-    box-sizing: border-box;
-    color: #111827;
-    font-size: .875rem;
-    font-weight: 600;
-    line-height: 1.25rem;
-    padding: 10px;
-    text-align: center;
-    text-decoration: none #D1D5DB solid;
-    text-decoration-thickness: auto;
-    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
-    cursor: pointer;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-  }
-  
-  .button-39:hover {
-    background-color: rgb(249,250,251);
-  }
-  
-  .button-39:focus {
-    outline: 2px solid transparent;
-    outline-offset: 2px;
-  }
-  
-  .button-39:focus-visible {
-    box-shadow: none;
-  }
+	background-color: #eee;
+	border: 1px solid rgb(209, 213, 219);
+	border-radius: .5rem;
+	box-sizing: border-box;
+	color: #111827;
+	font-size: .875rem;
+	font-weight: 600;
+	line-height: 1.25rem;
+	padding: 10px;
+	text-align: center;
+	text-decoration: none #D1D5DB solid;
+	text-decoration-thickness: auto;
+	box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
+	cursor: pointer;
+	user-select: none;
+	-webkit-user-select: none;
+	touch-action: manipulation;
+}
+
+.button-39:hover {
+	background-color: rgb(249, 250, 251);
+}
+
+.button-39:focus {
+	outline: 2px solid transparent;
+	outline-offset: 2px;
+}
+
+.button-39:focus-visible {
+	box-shadow: none;
+}
