--- a/tcc/src/main/resources/templates/perfil/perfil.html
+++ b/tcc/src/main/resources/templates/perfil/perfil.html
@@ -1,32 +1,32 @@
 <html>
 
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+		integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+		crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+	<!-- Boostrap -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+	<!-- Boostrap -->
 
-    <!-- Boostrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <!-- Boostrap -->
+	<!--Google Fonts -->
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&family=Roboto:wght@300;500;700&display=swap"
+		rel="stylesheet">
+	<!--Google Fonts -->
 
-    <!--Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&family=Roboto:wght@300;500;700&display=swap"
-        rel="stylesheet">
-    <!--Google Fonts -->
+	<!-- Font Awesome -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+		integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+		crossorigin="anonymous" referrerpolicy="no-referrer" />
+	<!-- Font Awesome -->
 
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!-- Font Awesome -->
-
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
-        integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI=" crossorigin="" />
-    <link href="/css/perfil.css" rel="stylesheet" />
+	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
+		integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI=" crossorigin="" />
+	<link href="/css/perfil.css" rel="stylesheet" />
 
 
 </head>
@@ -35,83 +35,83 @@
 
 
 
-    <div class="navigation">
-        <div id="logo">
-            <a href="/">
-                <p>ODIN</p>
-            </a>
-        </div>
+	<div class="navigation">
+		<div id="logo">
+			<a href="/">
+				<p>ODIN</p>
+			</a>
+		</div>
 
-        <div class="caixaPesquisa">
-            <div class="pesquisa">
-                <input type="search" id="inputPesquisa" onkeyup="filtrar()" placeholder="Oque você busca ?">
-            </div>
+		<div class="caixaPesquisa">
+			<div class="pesquisa">
+				<input type="search" id="inputPesquisa" onkeyup="filtrar()" placeholder="Oque você busca ?">
+			</div>
 
-            <div class="listaProdutos">
-                <ul id="lista">
+			<div class="listaProdutos">
+				<ul id="lista">
 
-                </ul>
-            </div>
+				</ul>
+			</div>
 
-        </div>
-
-
-        <div class="links">
-            <ul>
-                <li><a href="/cadastrar">Indicar um Local</a></li>
-                <li><a href="/estabelecimentos/todos">Estabelecimentos</a></li>
-                <li><a href="#" id="login">Login</a></li>
-            </ul>
-        </div>
-    </div>
-
-    <section id="caixaPerfil">
-        <div id="perfil">
-
-            <div id="icones">
-                <button onclick="editarPerfil()"><i class="fa-solid fa-pen-to-square" id="iconeEdit"></i></button>
-            </div>
-
-            <div class="profile-picture">
-                <input type="file" id="uploadInput" accept="image/*" disabled onchange="previewImage()">
-                <label for="uploadInput">
-                    <img id="preview" src="" alt="">
-                </label>
-            </div>
-
-            <div id="perfilCampos">
-               <div class="campo">
-                <label >CPF</label>
-                <input type="text" id="cpf">
-               </div>
-
-               <div class="campo">
-                <label >Nome</label>
-                <input type="text" id="nome">
-               </div>
-
-               <div class="campo">
-                <label >Email</label>
-                <input type="email" id="email">
-               </div>
-
-            </div>
-
-            <div id="botoes">
-                <button class="button-39" onclick="voltarHome()" role="button">Voltar</button>
-                <button class="button-39" onclick="atualizarPerfil()" role="button">Salvar</button>
-            </div>
-        </div>
-    </section>
+		</div>
 
 
+		<div class="links">
+			<ul>
+				<li><a href="/estabelecimento/cadastrar">Indicar um Local</a></li>
+				<li><a href="/estabelecimentos/todos">Estabelecimentos</a></li>
+				<li><a href="#" id="login">Login</a></li>
+			</ul>
+		</div>
+	</div>
 
-    <footer>
-        <p class="m-0 text-center text-white">Copyright &copy; ODIN Website 2023</p>
-    </footer>
+	<section id="caixaPerfil">
+		<div id="perfil">
+
+			<div id="icones">
+				<button onclick="editarPerfil()"><i class="fa-solid fa-pen-to-square" id="iconeEdit"></i></button>
+			</div>
+
+			<div class="profile-picture">
+				<input type="file" id="uploadInput" accept="image/*" disabled onchange="previewImage()">
+				<label for="uploadInput">
+					<img id="preview" src="" alt="">
+				</label>
+			</div>
+
+			<div id="perfilCampos">
+				<div class="campo">
+					<label>CPF</label>
+					<input type="text" id="cpf">
+				</div>
+
+				<div class="campo">
+					<label>Nome</label>
+					<input type="text" id="nome">
+				</div>
+
+				<div class="campo">
+					<label>Email</label>
+					<input type="email" id="email">
+				</div>
+
+			</div>
+
+			<div id="botoes">
+				<button class="button-39" onclick="voltarHome()" role="button">Voltar</button>
+				<button class="button-39" onclick="atualizarPerfil()" role="button">Salvar</button>
+			</div>
+		</div>
+	</section>
+
+
+
+	<footer>
+		<p class="m-0 text-center text-white">Copyright &copy; ODIN Website 2023</p>
+	</footer>
 
 	<script src="/js/scriptHome.js"></script>
-    <script src="/js/scriptPerfil.js"></script>
+	<script src="/js/scriptPerfil.js"></script>
 </body>
 
 </html>
