--- a/tcc/src/main/resources/static/css/formEstabelecimento.css
+++ b/tcc/src/main/resources/static/css/formEstabelecimento.css
@@ -1,9 +1,153 @@
 * {
 	font-family: 'Poppins', sans-serif;
 	font-family: 'Roboto', sans-serif;
-	margin:0;
+	margin: 0;
 	padding: 0;
 }
+
+@media (max-width:1200px) {
+	.listaProdutos {
+		width: 496px !important;
+		top: 129px;
+	}
+
+	.caixaPesquisa {
+		display: flex !important;
+		justify-content: center !important;
+	}
+
+	.navigation {
+		flex-direction: column;
+		gap: 1rem;
+	}
+}
+
+@media (max-width:767px) {
+	body {
+		overflow-x: hidden;
+	}
+
+	#logo {
+		text-align: center;
+	}
+
+	.caixaPesquisa input {
+		width: 400px !important;
+	}
+
+	.services-itens {
+		flex-direction: column;
+	}
+
+	.navigation {
+		flex-direction: column;
+		gap: 1rem;
+		align-items: unset !important;
+	}
+	
+	.caixaPesquisa input {
+		width: 360px !important;
+	}
+
+
+	.services-itens {
+		flex-direction: column;
+	}
+
+	ul {
+		flex-direction: column;
+		align-items: center;
+		gap: 1rem;
+		padding-left: 0;
+	}
+
+	#caixaLocal {
+		flex-direction: column !important;
+		text-align: center;
+	}
+
+	#map {
+		width: 100% !important;
+	}
+
+	.form-control {
+		width: 90% !important;
+		margin-right: 20px;
+	}
+
+	#btnEnviar {
+		margin-right: 20px !important;
+		width: 33% !important;
+	}
+
+	#comments {
+		width: 90% !important;
+	}
+
+	.media-body {
+		width: 59% !important;
+	}
+
+	.listaProdutos {
+		width: 355px !important;
+	}
+}
+
+
+@media (max-width:375px) {
+	body {
+		overflow-x: hidden;
+	}
+
+	#logo {
+		text-align: center;
+	}
+
+	.navigation {
+		flex-direction: column;
+		gap: 1rem;
+		align-items: unset !important;
+	}
+
+	.services-itens {
+		flex-direction: column;
+	}
+
+	ul {
+		flex-direction: column;
+		align-items: center;
+		gap: 1rem;
+		padding-left: 0;
+	}
+
+	#caixaLocal {
+		flex-direction: column !important;
+		text-align: center;
+	}
+
+	#map {
+		width: 100% !important;
+	}
+
+	.form-control {
+		width: 90% !important;
+		margin-right: 20px;
+	}
+
+	#btnEnviar {
+		margin-right: 20px !important;
+		width: 33% !important;
+	}
+
+	#comments {
+		width: 90% !important;
+	}
+
+	.media-body {
+		width: 59% !important;
+	}
+}
+
 
 dt {
 	font-weight: 700;
@@ -11556,16 +11700,16 @@ footer {
 	padding: 10px;
 }
 
-#caixaPesquisa{
-  margin-top: 10px;
+#caixaPesquisa {
+	margin-top: 10px;
 }
 
-.links{
-  margin-top: 10px;
+.links {
+	margin-top: 10px;
 }
 
-#logo{
-  margin-top: 10px;
+#logo {
+	margin-top: 10px;
 }
 
 
@@ -11576,7 +11720,7 @@ footer {
 	list-style: none;
 }
 
-#logo p{
+#logo p {
 	font-size: 26px;
 	font-weight: bold;
 }
@@ -11662,7 +11806,7 @@ footer {
 /* Remove o ícone de limpar (x) do campo de input tipo search */
 input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-clear-button {
-    -webkit-appearance: none;
-    appearance: none;
-    display: none;
+	-webkit-appearance: none;
+	appearance: none;
+	display: none;
 }
