--- a/tcc/src/main/resources/static/css/home.css
+++ b/tcc/src/main/resources/static/css/home.css
@@ -1,9 +1,74 @@
 * {
 	font-family: 'Poppins', sans-serif;
 	font-family: 'Roboto', sans-serif;
-	margin:0;
+	margin: 0;
 	padding: 0;
 }
+
+@media (max-width:1200px) {
+	body {
+		overflow-x: hidden;
+	}
+
+	#filtros ul {
+		flex-direction: row !important;
+	}
+
+	#logo {
+		text-align: center;
+	}
+
+	.caixaPesquisa input {
+		width: 400px !important;
+	}
+
+	.navigation {
+		flex-direction: column;
+		gap: 1rem;
+		align-items: unset !important;
+	}
+
+	ul {
+		flex-direction: column;
+		align-items: center;
+		gap: 1rem;
+		padding-left: 0;
+	}
+
+	.listaProdutos {
+		width: 398px !important;
+		top: 113px;
+	}
+
+	.caixaPesquisa {
+		display: flex !important;
+		justify-content: center !important;
+	}
+}
+
+@media (max-width:767px) {
+	body {
+		gap: 2rem !important;
+	}
+
+	#filtros {
+		height: auto !important;
+	}
+
+	#filtros ul {
+		flex-direction: column !important;
+	}
+
+	#services {
+		margin-top: 3rem !important;
+	}
+
+	.caixaPesquisa input {
+		width: 360px !important;
+	}
+}
+
+
 
 @media (min-width: 1200px) {
 	.display-1 {
@@ -11381,6 +11446,11 @@ footer {
 
 body {
 	background: #FFF5E0;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	gap: 3rem;
+	height: 100vh;
 }
 
 #sobre {
@@ -11406,17 +11476,18 @@ body {
 	padding: 10px;
 }
 
-#caixaPesquisa{
-  margin-top: 10px;
+#caixaPesquisa {
+	margin-top: 10px;
 }
 
-.links{
-  margin-top: 10px;
+.links {
+	margin-top: 10px;
 }
 
-#logo{
-  margin-top: 10px;
+#logo {
+	margin-top: 10px;
 }
+
 #logo a {
 	color: white;
 	text-decoration: none;
@@ -11504,8 +11575,65 @@ body {
 /* Remove o ícone de limpar (x) do campo de input tipo search */
 input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-clear-button {
-    -webkit-appearance: none;
-    appearance: none;
-    display: none;
+	-webkit-appearance: none;
+	appearance: none;
+	display: none;
 }
 
+
+
+#paiFiltros {
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+#filtros {
+	height: 100px;
+	width: 50%;
+	border: 1px solid white;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+#filtros ul {
+	display: flex;
+	list-style-type: none;
+	padding: 0;
+	margin: 0;
+}
+
+#filtros li {
+	padding: 10px;
+}
+
+
+#filtros button {
+	background: none;
+	border: none;
+	padding: 5px;
+	transition: border-bottom 0.3s ease;
+}
+
+
+#filtros button span {
+	font-size: 18px;
+}
+
+#filtros button i {
+	margin-right: 5px;
+}
+
+#filtros button:hover,
+#filtros button.ativo {
+	border-bottom: 2px solid black;
+
+}
+
+
+
+#filtros ul li:last-child {
+	margin-right: 0;
+}
