--- a/tcc/src/main/resources/templates/cadastro/formCadastroEstabelecimento.html
+++ b/tcc/src/main/resources/templates/cadastro/formCadastroEstabelecimento.html
@@ -3,8 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="/css/cadEstabelecimento.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
@@ -14,6 +13,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&family=Roboto:wght@300;500;700&display=swap"
 		rel="stylesheet">
+	<link rel="stylesheet" href="/css/cadEstabelecimento.css">
 	<title>ODIN - Cadastro Estabelecimento</title>
 </head>
 
@@ -29,8 +29,17 @@
 					<input id="file-input" style="display: none;" type="file" accept="image/*" />
 				</div>
 				<input type="text" id="nome" name="nome" placeholder="Informe o nome do Estabelecimento" />
-				<input type="text" id="cnpj" name="cnpj" placeholder="Digite seu CNPJ" maxlength="18" />
-				<input type="tel" maxlength="15" id="telefone" name="telefone" placeholder="Informe o telefone de contato" onkeyup="handlePhone(event)"  />
+				<div style="display: flex; flex-direction: column;">
+					<label>
+						Informe o tipo do estabelecimento
+					</label>
+					
+					<select id="tipoEstab">
+						
+					</select>
+				</div>
+				<input type="tel" maxlength="15" id="telefone" name="telefone"
+					placeholder="Informe o telefone de contato" onkeyup="handlePhone(event)" />
 				<div class="form-group">
 					<textarea class="form-control" id="descricao" placeholder="Descreva seu Estabelecimento..."
 						minlength="150" maxlength="249" rows="4"></textarea>
@@ -58,9 +67,10 @@
 
 
 			<div class="login-form" id="quarto_form">
-				<input type="text" id="diasFuncionamento" name="horarioAbertura" placeholder="Informe os dias de funcionamento" />
-				<label>Horario de Abertura</label>	
-				<input type="time" id="horarioAbertura" name="horarioAbertura"/>
+				<input type="text" id="diasFuncionamento" name="horarioAbertura"
+					placeholder="Informe os dias de funcionamento" />
+				<label>Horario de Abertura</label>
+				<input type="time" id="horarioAbertura" name="horarioAbertura" />
 				<label>Horario de Fechamento</label>
 				<input type="time" id="horarioFechamento" name="horarioFechamento"
 					placeholder="Horario de Fechamento" />
