--- a/tcc/src/main/resources/templates/estabelecimento/formEstabelecimento.html
+++ b/tcc/src/main/resources/templates/estabelecimento/formEstabelecimento.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<meta name="description" content="" />
 	<meta name="author" content="" />
 	<title>ODIN</title>
@@ -42,7 +42,7 @@
 
 		<div class="caixaPesquisa">
 			<div class="pesquisa">
-				<input type="search" id="inputPesquisa"  placeholder="Oque você busca ?">
+				<input type="search" id="inputPesquisa" placeholder="Oque você busca ?">
 			</div>
 
 			<div class="listaProdutos">
@@ -148,7 +148,7 @@
 				<p id="textoLocal"></p>
 			</div>
 
-			<div id="map">
+			<div id="map" inert>
 
 			</div>
 		</div>
@@ -219,7 +219,7 @@
 	<script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
 		integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM=" crossorigin=""></script>
 
-	<script src="/js/scriptHome.js"></script>
+
 	<script src="/js/scriptFormEstabelecimento.js"></script>
 
 
