--- a/tcc/src/main/resources/templates/login/formLogin.html
+++ b/tcc/src/main/resources/templates/login/formLogin.html
@@ -2,39 +2,39 @@
 <html lang="pt-br">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/login.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-  <title>ODIN - Login</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+	<link rel="stylesheet" href="/css/login.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+	<title>ODIN - Login</title>
 </head>
 
 <body>
-  <div class="login-page">
-    <div id="logo-odin">
-      <a href="/"><img src="images/Odin-Logo.png" alt="Logo-Odin"></a>
-    </div>
-    <div class="form">
-      <form class="login-form" action="/login" method="post">
-        <input type="text" id="cpf" name="cpf" placeholder="Digite seu CPF" />
-        <input type="password" id="senha" name="senha" placeholder="Digite sua senha" />
-        <button id="btnLogin">login</button>
-        <div class="alert alert-primary" id="erroMsg" role="alert">
-        </div>
-        
-		<div id="caixaAbaixoLogin">
-			<p class="message">Não possui cadastro? <a href="/cadastro"><br>Clique aqui !</a></p>
-		
-			<p class="message">Esqueceu a senha? <a href="/recuperarSenha"><br>Clique aqui !</a></p>
+	<div class="login-page">
+		<div id="logo-odin">
+			<a href="/"><img src="images/Odin-Logo.png" alt="Logo-Odin"></a>
 		</div>
-      </form>
-    </div>
-  </div>
-  <script src="js/scriptLogin.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-    crossorigin="anonymous"></script>
+		<div class="form">
+			<form class="login-form" action="/login" method="post">
+				<input type="text" id="cpf" name="cpf" placeholder="Digite seu CPF" />
+				<input type="password" id="senha" name="senha" placeholder="Digite sua senha" />
+				<button id="btnLogin">login</button>
+				<div class="alert alert-primary" id="erroMsg" role="alert">
+				</div>
+
+				<div id="caixaAbaixoLogin">
+					<p class="message">Não possui cadastro? <a href="/cadastro"><br>Clique aqui !</a></p>
+
+					<p class="message">Esqueceu a senha? <a href="/recuperarSenha"><br>Clique aqui !</a></p>
+				</div>
+			</form>
+		</div>
+	</div>
+	<script src="js/scriptLogin.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+		crossorigin="anonymous"></script>
 </body>
 
 </html>
